--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -659,22 +659,84 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# 1. Use browser to visit the URL \n",
     "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "\n",
     "browser.visit(url)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# browser.find_by_css('a.product-item h3')[0].click()\n",
-    "# element = browser.find_link_by_text('Sample').first\n",
-    "# print(element['href'])\n",
-    "# browser.find_by_css(\"h2.title\").text"
+    "# 2. Create a list to hold the images and titles.\n",
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
+    "imgs_links= browser.find_by_css(\"a.product-item h3\")\n",
+    "for x in range(len(imgs_links)):\n",
+    "    hemisphere={}\n",
+    "    \n",
+    "    #Find elements going to click link. \n",
+    "    browser.find_by_css(\"a.product-item h3\")[x].click()\n",
+    "    \n",
+    "    #Find sample image link\n",
+    "    sample_img= browser.find_link_by_text(\"Sample\").first\n",
+    "    hemisphere['img_url']=sample_img['href']\n",
+    "    \n",
+    "    # Get hemisphere Title \n",
+    "    hemisphere['title']=browser.find_by_css(\"h2.title\").text\n",
+    "    \n",
+    "    # Add Objects to hemisphere_image_urls list\n",
+    "    hemisphere_image_urls.append(hemisphere)\n",
+    "    \n",
+    "    #Go Back\n",
+    "    browser.back()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
+       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
+       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
+       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
+       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
+       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4. Print the list that holds the dictionary of each image url and title.\n",
+    "hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Quit the browser\n",
+    "browser.quit()"
    ]
   },
   {
@@ -682,53 +744,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 2. Create a list to hold the images and titles.\n",
-    "hemisphere_image_urls = []\n",
-    "\n",
-    "#items = browser.find_by_css('a.product-item h3')\n",
-    "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
-    "for i in range(4):\n",
-    "    #create empty dictionary\n",
-    "    hemispheres = {}\n",
-    "    browser.find_by_css('a.product-item h3')[i].click()\n",
-    "    element = browser.find_link_by_text('Sample').first\n",
-    "    img_url = element['href']\n",
-    "    title = browser.find_by_css(\"h2.title\").text\n",
-    "    hemispheres[\"img_url\"] = img_url\n",
-    "    hemispheres[\"title\"] = title\n",
-    "    hemisphere_image_urls.append(hemispheres)\n",
-    "    browser.back()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 4. Print the list that holds the dictionary of each image url and title.\n",
-    "hemisphere_image_urls\n",
-    "[{'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg',\n",
-    "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-    " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg',\n",
-    "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
-    " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg',\n",
-    "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
-    " {'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg',\n",
-    "  'title': 'Valles Marineris Hemisphere Enhanced'}]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Quit the browser\n",
-    "browser.quit()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -742,7 +763,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.11"
   },
   "nteract": {
    "version": "0.15.0"
